2004-03-02  Richard Henderson  <rth@redhat.com>

        PR middle-end/11767
        * optabs.c (prepare_cmp_insn): Force trapping memories to registers
        before the compare, if flag_non_call_exceptions.

2004-03-02  Richard Henderson  <rth@redhat.com>

        PR middle-end/14327
        * stmt.c (expand_computed_goto): Do do_pending_stack_adjust before
        emitting the label, not after.

2004-03-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* cppinit.c (init_standard_includes): Check that sysroot
	string is not empty.

2004-03-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from 3.4.0:
	2004-02-29  Mark Mitchell  <mark@codesourcery.com>
	PR debug/14328
	* dwarf2out.c (gen_enumeration_type_die): Output all enumeration
	constants as signed values.

	2004-01-16  J"orn Rennecke <joern.rennecke@superh.com>
        PR optimization/11864
        * reload1.c (reload_cse_simplify_operands): Don't remove
        implicit extension from LOAD_EXTEND_OP.

2004-02-29  Hans-Peter Nilsson  <hp@axis.com>

	PR target/14346
	* config/cris/cris.c (cris_asm_output_mi_thunk): For PIC, prepend
	TAB to jumping "add.d" insn.  Avoid PLT indirection by equating a
	local symbol and jumping through it.

2004-02-29  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	Backport from mainline:
	2004-01-27  Eric Botcazou  <ebotcazou@libertysurf.fr>
	PR target/10904
	PR target/13058
	* config/sparc/sparc.h (CANNOT_CHANGE_MODE_CLASS): New.
	Forbid mode changes from SImode for lower FP regs if ARCH64.

2004-02-28  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.h (TRAMPOLINE_TEMPLATE, TRAMPOLINE_SIZE, TRAMPOLINE_CODE_SIZE,
	MIN_CACHELINE_SIZE, INITIALIZE_TRAMPOLINE): Backport fixes from 3.5.
	* pa.md (anddi3, dcacheflush, icacheflush): Likewise.

	* pa64-hpux.h (LIB_SPEC): Fix linking under HP-UX 11.00 with -p and -pg.

2004-02-27  Ian Lance Taylor  <ian@wasabisystems.com>

	PR optimization/7871
	* flow.c (mark_set_1): Don't add LOG_LINKS for global registers