@@ -1,3 +1,9 @@
+2004-03-05  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	PR inline-asm/6162
+	* reload.c (find_reloads): Only support one pair of commutative
+	operands.
+
 2004-03-02  Richard Henderson  <rth@redhat.com>
 
         PR middle-end/11767
